objects/Comp_Key_Test__x.object
<CustomObject>
    <externalDataSource>Composite_Key_Test</externalDataSource>
    <externalName>olxtest.comp-key-test</externalName>
    <fields>
        <fullName>Row__c</fullName>
        <externalDeveloperName>row</externalDeveloperName>
        <label>Row Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>active_listings_month__c</fullName>
        <externalDeveloperName>active_listings_month</externalDeveloperName>
        <label>Active Listings Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ad_page__c</fullName>
        <externalDeveloperName>ad_page</externalDeveloperName>
        <label>Ad Page</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>date_month__c</fullName>
        <externalDeveloperName>date_month</externalDeveloperName>
        <label>Date Month</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>impressions__c</fullName>
        <externalDeveloperName>impressions</externalDeveloperName>
        <label>Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nnl__c</fullName>
        <externalDeveloperName>nnl</externalDeveloperName>
        <label>NNL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>site_sk__c</fullName>
        <externalDeveloperName>site_sk</externalDeveloperName>
        <label>Site SK</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_sk__c</fullName>
        <externalDeveloperName>user_sk</externalDeveloperName>
        <label>User SK</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Comp Key Test</label>
    <listViews>
        <fullName>All</fullName>
        <columns>user_sk__c</columns>
        <columns>date_month__c</columns>
        <columns>ExternalId</columns>
        <columns>active_listings_month__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Comp Key Tests</pluralLabel>
</CustomObject>